--- a/betty/betty-Info.plist
+++ b/betty/betty-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>1398484324569470_a602x602</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.lmain.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
