--- a/betty/ZipArchive-Info.plist
+++ b/betty/ZipArchive-Info.plist
@@ -7,7 +7,11 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>1398484324569470_a602x602</string>
+	<string>ZipArchive.icns</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>ZipArchive.icns</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.lmain.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,18 +21,20 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2013年 杨博. All rights reserved.</string>
+	<string>Copyright © 2013年 傻大猫. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 </dict>
 </plist>
